Messing with svg logo

--- a/src/templates/about.hbs
+++ b/src/templates/about.hbs
@@ -6,68 +6,20 @@
 </head>
 
 <body id="top">
-  <!-- preloader
-    ================================================== -->
-  <div id="preloader">
-    <div id="loader" class="dots-fade">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-
-  <!-- page wrap
-    ================================================== -->
   <div id="page" class="s-pagewrap">
-    <!-- # site header 
-        ================================================== -->
-    <header class="s-header">
-      <div class="row s-header__inner width-sixteen-col">
-        <div class="s-header__block">
-          <div class="s-header__logo">
-            <a class="logo" href="index.html">
-              <img src="images/logo.svg" alt="Homepage" />
-            </a>
-          </div>
+    {{> components/header.hbs }}
 
-          <a class="s-header__menu-toggle" href="#0"><span>Menu</span></a>
-        </div>
-        <!-- end s-header__block -->
-
-        <nav class="s-header__nav">
-          <ul class="s-header__menu-links">
-            <li class="current"><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="blog.html">Journal</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-          <!-- s-header__menu-links -->
-
-          <div class="s-header__contact">
-            <a href="contact.html" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>
-          </div>
-          <!-- s-header__contact -->
-        </nav>
-        <!-- end s-header__nav -->
-      </div>
-      <!-- end s-header__inner -->
-    </header>
-    <!-- end s-header -->
-
-    <!-- # site main content
-        ================================================== -->
     <section id="content" class="s-content">
       <section class="s-pageheader pageheader">
         <div class="row">
           <div class="column xl-12">
             <h1 class="page-title">
-              <span class="page-title__small-type text-pretitle">About</span>
-              Hi, I'm Troy
+              <span class="page-title__small-type text-pretitle">{{title}}</span>
+              {{heading}}
             </h1>
           </div>
         </div>
       </section>
-      <!-- end pageheader -->
 
       <section class="s-pagecontent pagecontent">
         <div class="row pageintro">
