--- a/src/templates/components/header.hbs
+++ b/src/templates/components/header.hbs
@@ -3,7 +3,7 @@
     <div class="s-header__block">
       <div class="s-header__logo">
         <a class="logo" href="index.html">
-          <img src="images/logo.svg" alt="Homepage" />
+          <img src="images/Troy_.svg" alt="Homepage" />
         </a>
       </div>
 
