--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -6,8 +6,9 @@
 </head>
 
 <body id="top">
-  <div id="page" class="s-pagewrap ss-home">
+  <div id="page" class="s-pagewrap ss-home" style="view-transition-name: hero">
     {{> components/header.hbs }}
+
     <section id="content" class="s-content">
       <section id="intro" class="s-intro">
         <div class="row s-intro__content width-sixteen-col">
