--- a/src/templates/components/head.hbs
+++ b/src/templates/components/head.hbs
@@ -1,13 +1,17 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>
-  {{title}}
+  {{title}} - Troy
 </title>
 
-<link rel="stylesheet" href="vendor.css" />
+{{!-- <link rel="stylesheet" href="vendor.css" /> --}}
 <link rel="stylesheet" href="main.css" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
 <link rel="manifest" href="site.webmanifest" />
+<meta name="description"
+  content="Troy Forster is a consulting technology director and fractional CTO with expertise in computer programming, agile methodologies, team-building, and mentorship. Learn more about how he can help drive your technology strategy forward." />
+
+<meta name="view-transition" content="same-origin" />
