--- a/src/templates/components/header.hbs
+++ b/src/templates/components/header.hbs
@@ -28,8 +28,8 @@
           </a>
         </li>
         <li>
-          <a href="blog.html">
-            Journal
+          <a href="projects.html">
+            Projects &amp; Case Studies
           </a>
         </li>
         <li>
@@ -45,10 +45,6 @@
           Let's Work Together
         </a>
       </div>
-      <!-- s-header__contact -->
     </nav>
-    <!-- end s-header__nav -->
   </div>
-  <!-- end s-header__inner -->
 </header>
-<!-- end s-header -->
