--- a/src/templates/home.hbs
+++ b/src/templates/home.hbs
@@ -17,10 +17,7 @@
             <div class="s-intro__content-text">
               <div class="s-intro__content-pretitle text-pretitle">Hello, I'm Troy</div>
               <h1 class="s-intro__content-title">
-                I create marketing <br>
-                strategies for your <br>
-                business that get <br>
-                results.
+                {{ introText }}
               </h1>
             </div> <!-- s-intro__content-text -->
 
