--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1550,7 +1550,7 @@ hr.fancy::before {
   background-repeat: no-repeat;
   background: center center;
   background-size: contain;
-  background-image: url(../images/icons/icon-quote.svg);
+  /* background-image: url(images/icons/icon-quote.svg); */
   transform: translate(-50%, 0, 0);
   position: absolute;
   top: var(--vspace-1);
