--- a/src/templates/home.hbs
+++ b/src/templates/home.hbs
@@ -24,7 +24,7 @@
             <div class="s-intro__content-media">
               <div class="s-intro__content-media-inner">
                 {{!-- <img src="images/intro-bg.jpg" srcset="images/intro-bg.jpg 1x, images/intro-bg@2x.jpg 2x" alt=""> --}}
-                <img src="images/troy-forster.jpg" alt="">
+                <img src="{{cover}}" alt="">
                 <div class="lines">
                   <span></span>
                 </div>
@@ -526,19 +526,8 @@
       </div> <!-- end s-journal__content -->
 
     </section> <!-- end s-journal -->
-
-
-    <!-- # footer 
-        ================================================== -->
     {{>components/footer.hbs }}
-
-  </div> <!-- end page-wrap -->
-
-  <!-- Java Script
-    ================================================== -->
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
+  </div>
 </body>
 
 </html>
