--- a/src/templates/about.hbs
+++ b/src/templates/about.hbs
@@ -49,64 +49,96 @@
           <div class="grid-list-items list-items">
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Consectetur</h6>
+                <h6 class="list-items__item-small-title">Honesty and Transparency</h6>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia accusamus consectetur adipisicing elit
-                excepturi corrupti nam quae exercitationem cupiditate, provident ipsa delectus vero possimus reprehenderit quas
-                ut officiis tempora voluptatum quibusdam consectetur commodi.
+                I prioritize honesty and transparency in all my interactions, ensuring that my communications are clear and
+                truthful. This builds
+                trust and accountability, which are foundational to my professional and personal relationships.
               </p>
             </div>
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Adipisicing</h6>
+                <h6 class="list-items__item-small-title">Fairness and Equality</h6>
               </div>
               <p>
-                Molestias, autem impedit culpa dolores excepturi, quidem unde ducimus, rerum commodi deserunt earum, minus
-                voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe doloremque provident quas quae
-                exercitationem laboriosam.
+                Fairness is paramount to me. I strive to make unbiased decisions, whether hiring or working within a team, ensuring
+                that everyone is
+                judged solely on their abilities and contributions, without regard to gender, race, age, or other irrelevant
+                factors.
               </p>
             </div>
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Doloremque</h6>
+                <h6 class="list-items__item-small-title">Environmental Responsibility and Compassion for Animals</h6>
               </div>
               <p>
-                Mollitia accusamus consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisicing elit
-                excepturi corrupti nam quae exercitationem cupiditate, provident ipsa delectus vero possimus reprehenderit quas
-                ut officiis tempora voluptatum quibusdam consectetur commodi!
+                I believe in making choices that minimize harm to the environment and show compassion for animals. While not
+                militant, I advocate
+                for practices that reduce our environmental footprint and prioritize humane treatment of animals.
               </p>
             </div>
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Assumenda</h6>
+                <h6 class="list-items__item-small-title">Creativity and Innovation</h6>
               </div>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe doloremque provident quas quae exercitationem
-                laboriosam. Molestias, autem? Impedit culpa dolores excepturi, quidem unde ducimus, rerum commodi deserunt
-                earum, minus voluptatum?
+                I am at my best when I am creating. Whether it's developing new software tools or conceptualizing innovative
+                solutions, the process
+                of creation brings me joy and drives my professional endeavors.
+
               </p>
             </div>
+            <div class="grid-list-items__item list-items__item u-remove-bottom">
+              <div class="list-items__item-header">
+                <h6 class="list-items__item-small-title">Giving Back and Mentorship</h6>
+              </div>
+              <p>
+                I believe in giving back to the community, especially through open-source contributions and mentorship. By sharing
+                my knowledge and
+                experiences, I help others grow more quickly and contribute to the broader tech community.
+
+              </p>
+            </div>
+            <div class="grid-list-items__item list-items__item u-remove-bottom">
+              <div class="list-items__item-header">
+                <h6 class="list-items__item-small-title">Analytical Thinking and Problem-Solving</h6>
+              </div>
+              <p>
+                I value analytical thinking and a methodical approach to problem-solving. These traits enable me to dissect complex
+                issues, identify
+                root causes, and develop effective solutions, ensuring the success of the projects I undertake.
+
+              </p>
+            </div>
+
           </div>
           <!--grid-list-items -->
 
           <h2>Why Work With Me</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque temporibus culpa perferendis expedita assumenda
-            mollitia magnam, facilis voluptates voluptatum animi numquam quas ea praesentium quaerat maxime sunt odit inventore
-            itaque est et autem sequi nulla. Distinctio obcaecati nesciunt asperiores dolorum tenetur voluptates, nemo alias
-            doloremque. Quos cumque ipsum laudantium odio vero aut odit nostrum aliquam? Nostrum in facilis, minus fuga quasi
-            voluptas explicabo possimus incidunt, expedita tempora eius rem nobis sequi. Doloribus esse sint suscipit quam nisi
-            blanditiis voluptate explicabo.
-          </p>
+          <p>With 30 years of experience, I've done it all—from help desk support and software development to networking and
+            infrastructure,
+            developer team leadership, systems architecture, and solutions development. My extensive background equips me with a
+            comprehensive
+            understanding of various aspects of technology and business.</p>
 
-          <p>
-            Quibusdam quis autem voluptatibus earum vel ex error ea magni. Rerum quam quos. Aut asperiores sit mollitia. Rem
-            neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut magnam. Cumque ducimus laborum doloribus
-            facere maxime vel earum quidem enim suscipit. Numquam, corporis accusamus commodi saepe nostrum nesciunt nisi rem
-            necessitatibus unde laboriosam molestias, quam ipsa voluptatum sed ex cumque facilis assumenda maiores tempore
-            reiciendis enim accusantium?
-          </p>
+          <p>I have been user-focused long before terms like interface design and user experience design became popular. My
+            compassion and
+            empathy drive me to create solutions that truly meet the needs of users.</p>
+
+          <p>My commitment to continuous learning means I never stop growing and evolving with the ever-changing technology
+            landscape. This
+            passion for discovery allows me to stay ahead of trends and deliver cutting-edge solutions.</p>
+
+          <p>I excel at adjusting my language to effectively communicate with everyone, from the most neophyte to the most advanced
+            individuals.
+            Whether I'm engaging with senior executives or the C-Suite, I am very much at home, ensuring clear and effective
+            communication at
+            all levels.</p>
+
+          <p>Choosing to work with me means partnering with someone who brings a wealth of experience, a user-centric approach, and
+            the ability
+            to navigate and thrive in the dynamic world of technology.</p>
 
           <h2>A Few More Words About Myself</h2>
           <p>
