--- a/src/templates/home.hbs
+++ b/src/templates/home.hbs
@@ -59,34 +59,29 @@
             <div class="section-header grid-section-split__header">
               <div class="text-pretitle">About</div>
               <h2 class="text-display-title">
-                An inspiring headline about yourself.
+                Seasoned Technology Leader Driving Digital Transformation
               </h2>
             </div> <!-- end section-header -->
 
             <div class="s-about__content-main grid-section-split__primary">
-              <p class="attention-getter">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus iste ipsam quod repellat. Hic tempora ullam aperiam
-                ipsum optio magni vel inventore voluptatibus nisi maiores laboriosam
-                fuga iure, velit eligendi ab vero minima? Quae ducimus ab dignissimos
-                iure, eos consequatur est deleniti cum id aliquid neque.
-              </p>
+              <p class="attention-getter">With nearly four decades of hands-on experience in software development and technology
+                leadership, Troy has navigated diverse industries, from engineering and finance to advertising and startups. His
+                journey has encompassed roles as a developer, solutions architect, enterprise architect, team leader, technology
+                director, and UX practitioner, culminating in his current position as a consultant and fractional CTO.</p>
 
-              <p class="attention-getter">
-                Autem tenetur commodi maiores. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Est eligendi fugit, facilis velit reiciendis iure laudantium. Praesentium repellat
-                corrupti dolor sit sint obcaecati. Modi aut quo molestiae a explicabo maiores necessitatibus
-                nemo repellendus architecto? Corrupti numquam ullam nostrum, eveniet at doloribus blanditiis
-                aliquid a est porro aspernatur pariatur culpa soluta nesciunt odio quasi maxime debitis illum.
-              </p>
+              <p class="attention-getter">Troy's deep technical expertise spans a wide array of operating systems, programming
+                languages, and proprietary tools. This breadth of knowledge, coupled with his passion for problem-solving, equips
+                him to tackle even the most challenging and unconventional projects. Troy's leadership philosophy centers on
+                honesty, transparency, continuous learning, leading by example, and fostering a collaborative environment.</p>
 
-              <p class="attention-getter">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repellendus iste ipsam quod repellat. Hic tempora ullam aperiam
-                ipsum optio magni vel inventore voluptatibus nisi maiores laboriosam
-                fuga iure, velit eligendi ab vero minima? Quae ducimus ab dignissimos
-                iure, eos consequatur est deleniti cum id aliquid neque.
-              </p>
+              <p class="attention-getter">A testament to his ability to drive digital transformation, Troy spearheaded the
+                development of a next-generation API for GS1 Canada, replacing their legacy system. He also built a highly regarded
+                technology team at TBWA/Toronto, revolutionizing the agency's approach to digital campaigns.</p>
+
+              <p class="attention-getter">Troy is committed to delivering efficient, user-centric solutions that exceed
+                expectations. His unique blend of technical prowess, leadership acumen, and unwavering dedication sets him apart as
+                a trusted partner for businesses seeking to leverage technology for strategic growth.</p>
+
             </div> <!-- end s-about__content-main -->
 
             <div class="s-about__content-btn grid-section-split__bottom">
