--- a/src/templates/about.hbs
+++ b/src/templates/about.hbs
@@ -13,11 +13,14 @@
     <section class="s-pagecontent pagecontent">
       <div class="row pageintro">
         <div class="column xl-6 lg-12">
-          <h2 class="text-display-title">{{inspiration.heading}}</h2>
+          <h2 class="text-display-title">Lifelong Technologist Dedicated to Innovation</h2>
         </div>
         <div class="column xl-6 lg-12 u-flexitem-x-right">
           <p class="lead">
-            {{inspiration.content}}
+            From my early days tinkering with computers to leading digital transformations for major brands, technology has always
+            been at the heart of my journey. I thrive on unraveling complex challenges and crafting elegant solutions that drive
+            business growth. My passion lies in bridging the gap between technology and its practical applications, empowering
+            organizations to harness its full potential.
           </p>
         </div>
       </div>
@@ -36,27 +39,54 @@
         <div class="column xl-12">
           <h2>How I Got Here</h2>
           <p>
-            Eaque temporibus culpa perferendis expedita assumenda mollitia magnam. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit facilis voluptates voluptatum animi numquam quas ea praesentium quaerat maxime sunt odit inventore
-            itaque est et autem sequi nulla. Distinctio obcaecati nesciunt asperiores dolorum tenetur voluptates, nemo alias
-            doloremque. Quos cumque ipsum laudantium odio vero aut odit nostrum aliquam? Nostrum in facilis, minus fuga quasi
-            voluptas explicabo possimus incidunt, expedita tempora eius rem nobis sequi. Doloribus esse sint suscipit quam nisi
-            blanditiis voluptate explicabo.
+            My fascination with technology began at an early age, fueled by countless hours spent exploring the possibilities of
+            early personal computers. This curiosity led me to pursue a career in software development, where I quickly discovered
+            my knack for
+            problem-solving
+            and creating innovative solutions. Over the years, I've had the privilege of working across diverse industries, from
+            finance and advertising to startups and non-profits. Each experience has enriched my understanding of the unique
+            challenges businesses face and how technology can be leveraged to overcome them. My passion for continuous learning and
+            staying ahead of the curve has driven me to explore new technologies and methodologies, ensuring that I can deliver the
+            most effective and cutting-edge solutions for my clients. Today, I stand as a seasoned technology leader, committed to
+            helping organizations navigate the complexities of digital transformation and achieve their strategic goals.
+
           </p>
 
           <h2 class="u-add-bottom">My Values & Beliefs</h2>
 
           <div class="grid-list-items list-items">
+
+            <div class="grid-list-items__item list-items__item u-remove-bottom">
+              <div class="list-items__item-header">
+                <h6 class="list-items__item-small-title">Analytical Thinking and Problem-Solving</h6>
+              </div>
+              <p>I value analytical thinking and a methodical approach to problem-solving. These traits enable me to dissect complex
+                issues, identify
+                root causes, and develop effective solutions, ensuring the success of the projects I undertake.
+
+              </p>
+            </div>
+            <div class="grid-list-items__item list-items__item u-remove-bottom">
+              <div class="list-items__item-header">
+                <h6 class="list-items__item-small-title">Creativity and Innovation</h6>
+              </div>
+              <p>I am at my best when I am creating. Whether it's developing new software tools or conceptualizing innovative
+                solutions, the process
+                of creation brings me joy and drives my professional endeavors.
+
+              </p>
+            </div>
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
                 <h6 class="list-items__item-small-title">Honesty and Transparency</h6>
               </div>
-              <p>
-                I prioritize honesty and transparency in all my interactions, ensuring that my communications are clear and
+              <p>I prioritize honesty and transparency in all my interactions, ensuring that my communications are clear and
                 truthful. This builds
                 trust and accountability, which are foundational to my professional and personal relationships.
+
               </p>
             </div>
+
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
                 <h6 class="list-items__item-small-title">Fairness and Equality</h6>
@@ -66,26 +96,20 @@
                 that everyone is
                 judged solely on their abilities and contributions, without regard to gender, race, age, or other irrelevant
                 factors.
+
               </p>
             </div>
             <div class="grid-list-items__item list-items__item u-remove-bottom">
               <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Environmental Responsibility and Compassion for Animals</h6>
+                <h6 class="list-items__item-small-title">Sustainability and Social Responsibility</h6>
               </div>
               <p>
-                I believe in making choices that minimize harm to the environment and show compassion for animals. While not
-                militant, I advocate
-                for practices that reduce our environmental footprint and prioritize humane treatment of animals.
-              </p>
-            </div>
-            <div class="grid-list-items__item list-items__item u-remove-bottom">
-              <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Creativity and Innovation</h6>
-              </div>
-              <p>
-                I am at my best when I am creating. Whether it's developing new software tools or conceptualizing innovative
-                solutions, the process
-                of creation brings me joy and drives my professional endeavors.
+                I am committed to promoting sustainable practices and contributing to a more socially responsible world. I believe
+                that businesses
+                have a crucial role to play in addressing environmental challenges and fostering positive social impact. I strive to
+                incorporate ESG
+                principles into my work, seeking solutions that balance economic growth with environmental stewardship and social
+                well-being.
 
               </p>
             </div>
@@ -100,17 +124,7 @@
 
               </p>
             </div>
-            <div class="grid-list-items__item list-items__item u-remove-bottom">
-              <div class="list-items__item-header">
-                <h6 class="list-items__item-small-title">Analytical Thinking and Problem-Solving</h6>
-              </div>
-              <p>
-                I value analytical thinking and a methodical approach to problem-solving. These traits enable me to dissect complex
-                issues, identify
-                root causes, and develop effective solutions, ensuring the success of the projects I undertake.
 
-              </p>
-            </div>
 
           </div>
           <!--grid-list-items -->
@@ -142,12 +156,24 @@
 
           <h2>A Few More Words About Myself</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et assumenda debitis aut quidem ad voluptates quibusdam
-            soluta temporibus, eveniet nobis tempore sunt, provident sapiente accusamus dignissimos voluptatum fugiat nulla
-            dicta nihil molestiae aspernatur error in. Ut quo porro voluptatum delectus asperiores culpa non cum facere minima
-            nesciunt assumenda, praesentium reprehenderit accusamus, quam repellat nobis nemo? Ut magnam unde culpa pariatur
-            possimus sunt fugiat ea maxime praesentium eaque quo odio sed eligendi harum dolor, repellendus reprehenderit facere
-            nihil quam. Saepe, magni.
+            While technology is my passion, my life extends beyond the digital realm. Born in London, England, I emigrated to Canada
+            with my
+            parents at the age of 10, embracing a new home and culture. A life-changing experience in 2005, a successful kidney
+            transplant, has
+            given me a profound appreciation for health and the outdoors. I'm an avid sports enthusiast, having competed in numerous
+            mountain
+            bike relay races and multi-day adventure races. I'm currently getting back into shape for an exciting bike-packing trip
+            in 2025.
+            I've even had a few brushes with the entertainment world, appearing in a 1992 movie that opened the Toronto
+            International Film
+            Festival, narrating an opera documentary, and providing a voiceover for a TV program about the Titanic – a case of being
+            in the
+            right place at the right time! When I'm not immersed in technology or exploring the great outdoors, you might find me
+            hiking the
+            Bruce Trail, where I've covered over 75% of its scenic path so far. And, of course, spending time with my rescue cat,
+            Gilbert, who
+            always brings a smile to my face.
+
           </p>
         </div>
         <!-- end grid-block-->
