--- a/src/templates/components/footer.hbs
+++ b/src/templates/components/footer.hbs
@@ -3,38 +3,36 @@
     <div class="column xl-6 lg-6 md-12 s-footer__block s-footer__about">
       <h3>About Troy</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas illum quasi facere libero,
-        fugiat laboriosam possimus reprehenderit eveniet vero voluptatum fugit ad quis veritatis suscipit beatae
-        incidunt perferendis tempore earum hic repellendus quisquam recusandae ipsa id esse. Nobis, aut deleniti.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere ratione dignissimos.
+        A seasoned technology leader with 30+ years of experience, dedicated to innovation and problem-solving. I offer
+        a user-centric approach, a commitment to continuous learning, and clear communication to help businesses leverage technology
+        for strategic growth.
       </p>
     </div>
     <div class="column xl-3 lg-6 md-12 s-footer__block s-footer__site-links">
       <h3>Site Links</h3>
       <ul class="link-list">
         <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="blog.html">Journal</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="projects.html">Projects &amp; Case Studies</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a></li>
+
       </ul>
     </div>
     <div class="column xl-3 lg-6 md-12 tab-12 s-footer__block s-footer__newsletter">
-      <h3>Newsletter</h3>
+      <h3>Techsmarts</h3>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere ratione dignissimos.
-      </p>
+        I maintain a Tumbler account, where I share interesting links on technology. </p>
 
       <div class="subscribe-form">
         <form id="mc-form" class="mc-form">
-          <input type="email" name="EMAIL" id="mce-EMAIL" class="u-fullwidth text-center" placeholder="Your Email Address"
+          {{!-- <input type="email" name="EMAIL" id="mce-EMAIL" class="u-fullwidth text-center" placeholder="Your Email Address"
             title="The domain portion of the email address is invalid (the portion after the @)."
             pattern="^([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x22([^\x0d\x22\x5c\x80-\xff]|\x5c[\x00-\x7f])*\x22))*\x40([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d)(\x2e([^\x00-\x20\x22\x28\x29\x2c\x2e\x3a-\x3c\x3e\x40\x5b-\x5d\x7f-\xff]+|\x5b([^\x0d\x5b-\x5d\x80-\xff]|\x5c[\x00-\x7f])*\x5d))*(\.\w{2,})+$"
-            required>
-          <input type="submit" name="subscribe" value="Subscribe" class="btn btn--primary btn--small u-fullwidth">
-          <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_cdb7b577e41181934ed6a6a44_9a91cfe7b3" tabindex="-1" value=""></div> -->
+            required> --}}
+          <a type="submit" name="subscribe" value="Subscribe" class="btn btn--primary btn--small u-fullwidth"
+            href="https://techsmarts.tumblr.com/">Techsmarts</a>
           <div class="mc-status"></div>
         </form>
       </div>
@@ -44,6 +42,34 @@
   <div class="row s-footer__bottom">
     <div class="column xl-6 lg-12">
       <ul class="s-footer__social social-list">
+
+        <!-- GitHub -->
+        <li>
+          <a href="https://github.com/tforster">
+            <svg width="98" height="96" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98 96">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+                fill="#24ccc292f" />
+            </svg>
+            <span class="u-screen-reader-text">GitHub</span>
+          </a>
+        </li>
+
+        <!-- LinkedIn -->
+        <li>
+          <a href="https://www.linkedin.com/in/tforster/">
+            <svg height="72" width="72" viewBox="0 0 72 72" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M8,72 L64,72 C68.418278,72 72,68.418278 72,64 L72,8 C72,3.581722 68.418278,-8.11624501e-16 64,0 L8,0 C3.581722,8.11624501e-16 -5.41083001e-16,3.581722 0,8 L0,64 C5.41083001e-16,68.418278 3.581722,72 8,72 Z" />
+              <path
+                d="M62,62 L51.315625,62 L51.315625,43.8021149 C51.315625,38.8127542 49.4197917,36.0245323 45.4707031,36.0245323 C41.1746094,36.0245323 38.9300781,38.9261103 38.9300781,43.8021149 L38.9300781,62 L28.6333333,62 L28.6333333,27.3333333 L38.9300781,27.3333333 L38.9300781,32.0029283 C38.9300781,32.0029283 42.0260417,26.2742151 49.3825521,26.2742151 C56.7356771,26.2742151 62,30.7644705 62,40.051212 L62,62 Z M16.349349,22.7940133 C12.8420573,22.7940133 10,19.9296567 10,16.3970067 C10,12.8643566 12.8420573,10 16.349349,10 C19.8566406,10 22.6970052,12.8643566 22.6970052,16.3970067 C22.6970052,19.9296567 19.8566406,22.7940133 16.349349,22.7940133 Z M11.0325521,62 L21.769401,62 L21.769401,27.3333333 L11.0325521,27.3333333 L11.0325521,62 Z" />
+              </g>
+            </svg>
+            <span class="u-screen-reader-text">LinkedIn</span>
+          </a>
+        </li>
+
+        <!-- Facebook -->
         <li>
           <a href="https://www.facebook.com/troy.forster.374">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -55,6 +81,8 @@
             <span class="u-screen-reader-text">Facebook</span>
           </a>
         </li>
+
+        <!-- Twitter -->
         <li>
           <a href="https://twitter.com/tforster">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -66,6 +94,8 @@
             <span class="u-screen-reader-text">Twitter</span>
           </a>
         </li>
+
+        <!-- Instagram -->
         <li>
           <a href="https://www.instagram.com/tforster">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -81,18 +111,8 @@
             <span class="u-screen-reader-text">Instagram</span>
           </a>
         </li>
-        <li>
-          <a href="https://github.com/tforster">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-              style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
-              <path
-                d="M20.66 6.98a9.932 9.932 0 0 0-3.641-3.64C15.486 2.447 13.813 2 12 2s-3.486.447-5.02 1.34c-1.533.893-2.747 2.107-3.64 3.64S2 10.187 2 12s.446 3.487 1.34 5.02a9.924 9.924 0 0 0 3.641 3.64C8.514 21.553 10.187 22 12 22s3.486-.447 5.02-1.34a9.932 9.932 0 0 0 3.641-3.64C21.554 15.487 22 13.813 22 12s-.446-3.487-1.34-5.02zM12 3.66c2 0 3.772.64 5.32 1.919-.92 1.174-2.286 2.14-4.1 2.9-1.002-1.813-2.088-3.327-3.261-4.54A7.715 7.715 0 0 1 12 3.66zM5.51 6.8a8.116 8.116 0 0 1 2.711-2.22c1.212 1.201 2.325 2.7 3.34 4.5-2 .6-4.114.9-6.341.9-.573 0-1.006-.013-1.3-.04A8.549 8.549 0 0 1 5.51 6.8zM3.66 12c0-.054.003-.12.01-.2.007-.08.01-.146.01-.2.254.014.641.02 1.161.02 2.666 0 5.146-.367 7.439-1.1.187.373.381.793.58 1.26-1.32.293-2.674 1.006-4.061 2.14S6.4 16.247 5.76 17.5c-1.4-1.587-2.1-3.42-2.1-5.5zM12 20.34c-1.894 0-3.594-.587-5.101-1.759.601-1.187 1.524-2.322 2.771-3.401 1.246-1.08 2.483-1.753 3.71-2.02a29.441 29.441 0 0 1 1.56 6.62 8.166 8.166 0 0 1-2.94.56zm7.08-3.96a8.351 8.351 0 0 1-2.58 2.621c-.24-2.08-.7-4.107-1.379-6.081.932-.066 1.765-.1 2.5-.1.799 0 1.686.034 2.659.1a8.098 8.098 0 0 1-1.2 3.46zm-1.24-5c-1.16 0-2.233.047-3.22.14a27.053 27.053 0 0 0-.68-1.62c2.066-.906 3.532-2.006 4.399-3.3 1.2 1.414 1.854 3.027 1.96 4.84-.812-.04-1.632-.06-2.459-.06z">
-              </path>
-            </svg>
-            <span class="u-screen-reader-text">GitHub</span>
-          </a>
-        </li>
       </ul> <!-- end s-footer__social -->
+
     </div>
     <div class="column xl-6 lg-12">
       <p class="ss-copyright">
