Added some logos Added 300 bytes of JS to manage the mobile menu

--- a/src/templates/components/header.hbs
+++ b/src/templates/components/header.hbs
@@ -7,7 +7,7 @@
         </a>
       </div>
 
-      <a class="s-header__menu-toggle" href="#0">
+      <a class="s-header__menu-toggle" id="mobile-nav-toggle">
         <span>
           Menu
         </span>
