--- a/src/templates/home.hbs
+++ b/src/templates/home.hbs
@@ -132,8 +132,7 @@
 
       </section> <!-- end s-about -->
 
-      <!-- expertise
-            ----------------------------------------------- -->
+
       <section id="expertise" class="s-expertise">
 
         <div class="row s-expertise__content width-sixteen-col">
@@ -304,64 +303,7 @@
           </div> <!-- end column -->
         </div> <!-- end row -->
 
-        <div class="row s-clients__content-block width-sixteen-col">
-          <div class="column xl-12">
-
-            <div class="clients-list">
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/flash.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/rise.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/cactus.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/pinpoint.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/proline.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/vision.svg" alt="">
-                </a>
-              </div>
-              <div class="column clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/volume.svg" alt="">
-                </a>
-              </div>
-              <div class="column clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/hitech.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/terra.svg" alt="">
-                </a>
-              </div>
-              <div class="clients-list__item">
-                <a href="#0">
-                  <img src="images/clients/chain.svg" alt="">
-                </a>
-              </div>
-            </div> <!-- end clients-list -->
-
-          </div> <!-- end column -->
-        </div> <!-- end row -->
+        {{> components/clients.hbs }}
 
         {{> components/testimonials.hbs }}
 
