--- a/src/templates/home.hbs
+++ b/src/templates/home.hbs
@@ -303,7 +303,7 @@
           </div> <!-- end column -->
         </div> <!-- end row -->
 
-        {{> components/clients.hbs }}
+        {{> components/clients.hbs clients=this.clients }}
 
         {{> components/testimonials.hbs }}
 
