- Pre CSS slider implementation

--- a/src/templates/components/testimonials.hbs
+++ b/src/templates/components/testimonials.hbs
@@ -1,74 +1,22 @@
 <div class="row s-clients__content-block width-sixteen-col">
   <div class="column xl-12 testimonials">
-
     <div class="swiper-container testimonials__slider home-slider">
-
       <div class="swiper-wrapper">
-        <div class="testimonials__slide swiper-slide">
-          <p>
-            This is an example of a testimonials.Nisi dolores quaerat fuga rem nihil nostrum. Molestiae incidunt consequatur quis
-            ipsa autem
-            nam sit enim magni.
-            Voluptas tempore rem. Laudantium quia consequatur molestias.
-            Explicabo a quaerat sint autem dolore ducimus ut consequatur neque.
-          </p>
-          <div class="testimonials__author">
-            <img src="media/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-            <cite class="testimonials__cite">
-              <strong>John Rockefeller</strong>
-              <span>Standard Oil Co.</span>
-            </cite>
-          </div>
-        </div>
-        <div class="testimonials__slide swiper-slide">
-          <p>
-            Nisi dolores quaerat fuga rem nihil nostrum. Molestiae incidunt consequatur quis ipsa autem
-            nam sit enim magni.
-            Voluptas tempore rem. Laudantium quia consequatur molestias.
-            Explicabo a quaerat sint autem dolore ducimus ut consequatur neque.
-          </p>
-          <div class="testimonials__author">
-            <img src="images/avatars/user-04.jpg" alt="Author image" class="testimonials__avatar">
-            <cite class="testimonials__cite">
-              <strong>Andrew Carnegie</strong>
-              <span>Carnegie Steel Co.</span>
-            </cite>
-          </div>
-        </div>
-        <div class="testimonials__slide swiper-slide">
-          <p>
-            Voluptas tempore rem. Molestiae incidunt consequatur quis ipsa autem nam sit enim magni.
-            Explicabo a quaerat sint autem dolore ducimus ut consequatur neque.
-            Nisi dolores quaerat fuga rem nihil nostrum. Laudantium quia consequatur molestias.
-          </p>
-          <div class="testimonials__author">
-            <img src="images/avatars/user-06.jpg" alt="Author image" class="testimonials__avatar">
-            <cite class="testimonials__cite">
-              <strong>Henry Ford</strong>
-              <span>Ford Motor Co.</span>
-            </cite>
-          </div>
-        </div>
-        <div class="testimonials__slide swiper-slide">
-          <p>
-            Molestiae incidunt consequatur quis ipsa autem nam sit enim magni. Voluptas tempore rem.
-            Explicabo a quaerat sint autem dolore ducimus ut consequatur neque. Nisi dolores quaerat
-            fuga rem nihil nostrum.
-            Laudantium quia consequatur molestias.
-          </p>
-          <div class="testimonials__author">
-            <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
-            <cite class="testimonials__cite">
-              <strong>John Morgan</strong>
-              <span>JP Morgan & Co.</span>
-            </cite>
-          </div>
-        </div>
-      </div> <!-- end swiper-wrapper -->
+        {{#each testimonials}}
+          <div class="testimonials__slide swiper-slide">
+            {{{this.content}}}
 
+            <div class="testimonials__author">
+              <img src="{{this.author.avatar}}" alt="{{this.author.name}}" class="testimonials__avatar">
+              <cite class="testimonials__cite">
+                <strong>{{this.author.name}}</strong>
+                <span>{{this.author.org}}</span>
+              </cite>
+            </div>
+          </div>
+        {{/each}}
+      </div>
       <div class="swiper-pagination"></div>
-
-    </div> <!--end testimonials__slider -->
-
-  </div> <!-- end column -->
-</div> <!-- end row -->
+    </div>
+  </div>
+</div>
